fix: Align text size with recommended character limits

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -85,3 +85,13 @@ gcds-container ul {
     margin-top: 0.5em;
   }
 }
+
+.character-limit gcds-container {
+  li, dt, dd {
+    max-width: var(--gcds-text-character-limit);
+  }
+}
+
+pre {
+  padding: 1em;
+}
